# arbitrage-

./: README.md
nft-bridge-frontend/: index.html  script.js
nft-bridge-pallet/: Cargo.toml
nft-bridge-pallet/src/: lib.rs  mock.rs  tests.rs  xcm_handler.rs
